homework2-kuber/kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-kuber-service
  namespace: homework
  labels:
    app: homework-kuber
spec:
  selector:
    app: homework-kuber
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
