homework2-kuber/kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-kuber-ingress
  namespace: homework
  labels:
    app: homework-kuber  
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homework-kuber-service
            port:
              number: 8000
